<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DispositivosBTActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_weight="60"
                android:layout_marginLeft="25dp"
                android:textSize="18sp"
                android:text="@string/activar_bluetooth"
                android:layout_marginStart="25dp" />

            <Switch
                android:id="@+id/bluetooth_on_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:paddingRight="25dp"
                android:textOff="@string/no"
                android:textOn="@string/si"
                android:theme="@style/SCBSwitch"
                android:paddingEnd="25dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/dispositivo_seleccionado"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/devicesRecyclerView"
            android:layout_margin="8dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>